# redmine-mcp-server

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
redmine-bedrock-ec2/: app.py  bedrock_summarizer.py  proxy.py  redmine_client.py  requirements.txt  start.sh
redmine_mcp_server/: __init__.py  redmine_client.py  server.py
src/: app.ts  index.ts  lambda.ts  redmine-client.ts  server.ts  stdio.ts
