[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redmine-mcp-server"
version = "1.0.0"
description = "Redmine MCP Server for GenU (uvx / stdio)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
redmine-mcp-server = "redmine_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["redmine_mcp_server"]
